--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 01:24:00 PM</p>
+    <p class="lastupdate">09/14/2020 01:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">92.8&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">92.8&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">92.8&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.8&#176;F</td>
+        <td class="data">42.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">20%</td>
+        <td class="data">18%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.924 inHg (-0.058)</td>
+        <td class="data">29.919 inHg (-0.059)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph S (180&#176;)</td>
+        <td class="data">6 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.7&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="11:14:17 AM">
             52.9</span><br/>
-          <span title="03:06:12 AM">
-            45.6</span>
+          <span title="01:28:53 PM">
+            42.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:40:53 AM">
             95</span><br/>
-          <span title="01:21:41 PM">
-            20</span>
+          <span title="01:28:31 PM">
+            18</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:09:01 AM">
             29.985</span><br/>
-          <span title="01:16:01 PM">
-            29.922</span>
+          <span title="01:28:01 PM">
+            29.919</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:09:01 AM (Monday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:54:33 PM">
-            5</span><br/>
-          217
+          <span title="01:25:49 PM">
+            11</span><br/>
+          205
         </td>
         <td class="data new_row hilo_week">
           <span title="02:35:30 PM (Sunday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          19
+          20
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          239
+          238
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            75.7</span><br/>
+          <span title="01:25:01 PM">
+            75.8</span><br/>
           <span title="07:44:01 AM">
             73.0</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 22 hours, 37 minutes</td>
+      <td class="data">12 days, 22 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 22 hours, 37 minutes</td>
+      <td class="data">12 days, 22 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
