--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 01:24:00 PM</p>
+    <p class="lastupdate">09/14/2020 01:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -153,8 +153,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">52.9<br/>
             <span class="timestamp">11:14:17 AM</span><br/>
-            45.6<br/>
-            <span class="timestamp">03:06:12 AM</span>
+            42.7<br/>
+            <span class="timestamp">01:28:53 PM</span>
           </td>
           <td class="data new_row">52.9<br/>
             <span class="timestamp">11:14:17 AM (Monday)</span><br/>
@@ -182,8 +182,8 @@
           <td class="units">%</td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM</span><br/>
-            20<br/>
-            <span class="timestamp">01:21:41 PM</span>
+            18<br/>
+            <span class="timestamp">01:28:31 PM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -211,8 +211,8 @@
           <td class="units"> inHg</td>
           <td class="data new_row">29.985<br/>
             <span class="timestamp">10:09:01 AM</span><br/>
-            29.922<br/>
-            <span class="timestamp">01:16:01 PM</span>
+            29.919<br/>
+            <span class="timestamp">01:28:01 PM</span>
           </td>
           <td class="data new_row">29.985<br/>
             <span class="timestamp">10:09:01 AM (Monday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            5<br/>
-            217<br/>
-            <span class="timestamp">12:54:33 PM</span>
+            11<br/>
+            205<br/>
+            <span class="timestamp">01:25:49 PM</span>
           </td>
           <td class="data new_row">
             16<br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            19
+            20
           </td>
           <td class="data new_row">
             1<br/>
@@ -343,7 +343,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            239
+            238
           </td>
           <td class="data new_row">
             2<br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            75.7<br/>
-            <span class="timestamp">12:00:01 AM</span><br/>
+            75.8<br/>
+            <span class="timestamp">01:25:01 PM</span><br/>
             73.0<br/>
             <span class="timestamp">07:44:01 AM</span>
           </td>
