--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 01:39:00 PM</p>
+    <p class="lastupdate">09/14/2020 01:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">92.2&#176;F</td>
+        <td class="data">91.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">92.2&#176;F</td>
+        <td class="data">91.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">92.2&#176;F</td>
+        <td class="data">91.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.5&#176;F</td>
+        <td class="data">37.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">16%</td>
+        <td class="data">15%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.916 inHg (-0.059)</td>
+        <td class="data">29.916 inHg (-0.060)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph SSW (202&#176;)</td>
+        <td class="data">8 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.9&#176;F</td>
+        <td class="data">76.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="11:14:17 AM">
             52.9</span><br/>
-          <span title="01:36:13 PM">
-            39.3</span>
+          <span title="01:43:56 PM">
+            37.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:40:53 AM">
             95</span><br/>
-          <span title="01:36:13 PM">
-            16</span>
+          <span title="01:39:38 PM">
+            15</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
             95</span><br/>
-          <span title="02:12:50 PM (Sunday)">
-            16</span>
+          <span title="01:39:38 PM (Monday)">
+            15</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:09:01 AM">
             29.985</span><br/>
-          <span title="01:38:02 PM">
-            29.916</span>
+          <span title="01:41:02 PM">
+            29.915</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:09:01 AM (Monday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          14
+          359
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          187
+          188
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:34:01 PM">
-            75.9</span><br/>
+          <span title="01:39:02 PM">
+            76.0</span><br/>
           <span title="07:44:01 AM">
             73.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 22 hours, 52 minutes</td>
+      <td class="data">12 days, 22 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 22 hours, 52 minutes</td>
+      <td class="data">12 days, 22 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
