--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 01:54:00 PM</p>
+    <p class="lastupdate">09/14/2020 01:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">35.3&#176;F</td>
+        <td class="data">35.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.914 inHg (-0.057)</td>
+        <td class="data">29.912 inHg (-0.059)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph S (180&#176;)</td>
+        <td class="data">10 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="11:14:17 AM">
             52.9</span><br/>
-          <span title="01:48:02 PM">
-            35.3</span>
+          <span title="01:55:52 PM">
+            35.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
             52.9</span><br/>
-          <span title="01:48:02 PM (Monday)">
-            35.3</span>
+          <span title="01:55:52 PM (Monday)">
+            35.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:09:01 AM">
             29.985</span><br/>
-          <span title="01:47:02 PM">
-            29.913</span>
+          <span title="01:57:02 PM">
+            29.912</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:09:01 AM (Monday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:53:52 PM">
-            14</span><br/>
-          189
+          <span title="01:58:34 PM">
+            16</span><br/>
+          203
         </td>
         <td class="data new_row hilo_week">
           <span title="02:35:30 PM (Sunday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          219
+          214
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          188
+          189
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 23 hours, 7 minutes</td>
+      <td class="data">12 days, 23 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 23 hours, 7 minutes</td>
+      <td class="data">12 days, 23 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
