--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 01:59:00 PM</p>
+    <p class="lastupdate">09/14/2020 02:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">35.4&#176;F</td>
+        <td class="data">31.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">14%</td>
+        <td class="data">12%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.912 inHg (-0.059)</td>
+        <td class="data">29.910 inHg (-0.061)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph SSW (202&#176;)</td>
+        <td class="data">10 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">76.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">37%</td>
       </tr>
     </tbody>
   </table>
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="11:14:17 AM">
             52.9</span><br/>
-          <span title="01:55:52 PM">
-            35.2</span>
+          <span title="02:03:36 PM">
+            31.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
             52.9</span><br/>
-          <span title="01:55:52 PM (Monday)">
-            35.2</span>
+          <span title="02:03:36 PM (Monday)">
+            31.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:40:53 AM">
             95</span><br/>
-          <span title="01:47:20 PM">
-            14</span>
+          <span title="02:03:34 PM">
+            12</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
             95</span><br/>
-          <span title="01:47:20 PM (Monday)">
-            14</span>
+          <span title="02:03:34 PM (Monday)">
+            12</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:09:01 AM">
             29.985</span><br/>
-          <span title="01:57:02 PM">
-            29.912</span>
+          <span title="02:02:02 PM">
+            29.910</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:09:01 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          214
+          212
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          236
+          235
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:52:02 PM">
-            76.2</span><br/>
+          <span title="02:03:02 PM">
+            76.3</span><br/>
           <span title="07:44:01 AM">
             73.0</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="06:53:01 AM">
             41</span><br/>
-          <span title="12:00:01 AM">
-            38</span>
+          <span title="02:03:02 PM">
+            37</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 23 hours, 12 minutes</td>
+      <td class="data">12 days, 23 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 23 hours, 12 minutes</td>
+      <td class="data">12 days, 23 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
