--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 02:04:00 PM</p>
+    <p class="lastupdate">09/14/2020 02:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">90.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">90.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">90.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">31.5&#176;F</td>
+        <td class="data">33.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (-0.061)</td>
+        <td class="data">29.913 inHg (-0.058)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph SW (225&#176;)</td>
+        <td class="data">10 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          212
+          211
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          189
+          190
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 23 hours, 17 minutes</td>
+      <td class="data">12 days, 23 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 23 hours, 17 minutes</td>
+      <td class="data">12 days, 23 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
