--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 02:14:00 PM</p>
+    <p class="lastupdate">09/14/2020 02:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.4&#176;F</td>
+        <td class="data">90.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.4&#176;F</td>
+        <td class="data">90.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.4&#176;F</td>
+        <td class="data">90.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">32.8&#176;F</td>
+        <td class="data">36.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">15%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">13 mph SSW (202&#176;)</td>
+        <td class="data">6 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:09:01 AM">
             29.985</span><br/>
-          <span title="02:13:02 PM">
-            29.908</span>
+          <span title="02:15:02 PM">
+            29.907</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:09:01 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          209
+          207
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          234
+          233
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 23 hours, 27 minutes</td>
+      <td class="data">12 days, 23 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 23 hours, 27 minutes</td>
+      <td class="data">12 days, 23 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
