--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 02:34:00 PM</p>
+    <p class="lastupdate">09/14/2020 02:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.3&#176;F</td>
+        <td class="data">89.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.3&#176;F</td>
+        <td class="data">89.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.3&#176;F</td>
+        <td class="data">89.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">34.6&#176;F</td>
+        <td class="data">33.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.905 inHg (-0.062)</td>
+        <td class="data">29.906 inHg (-0.058)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph S (180&#176;)</td>
+        <td class="data">11 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">35%</td>
+        <td class="data">34%</td>
       </tr>
     </tbody>
   </table>
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="02:27:04 PM">
-            18</span><br/>
-          211
+          <span title="02:37:20 PM">
+            19</span><br/>
+          208
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:27:04 PM (Monday)">
-            18</span><br/>
-          211
+          <span title="02:37:20 PM (Monday)">
+            19</span><br/>
+          208
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -439,16 +439,16 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          0<br/>
-          204
+          1<br/>
+          203
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          190
+          191
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          232
+          231
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="06:53:01 AM">
             41</span><br/>
-          <span title="02:23:02 PM">
-            35</span>
+          <span title="02:36:02 PM">
+            34</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 23 hours, 47 minutes</td>
+      <td class="data">12 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 23 hours, 47 minutes</td>
+      <td class="data">12 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
