--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 02:44:00 PM</p>
+    <p class="lastupdate">09/14/2020 02:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.3&#176;F</td>
+        <td class="data">90.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.3&#176;F</td>
+        <td class="data">90.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.3&#176;F</td>
+        <td class="data">90.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">32.8&#176;F</td>
+        <td class="data">36.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">15%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.905 inHg (-0.058)</td>
+        <td class="data">29.905 inHg (-0.057)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">12 mph SSW (202&#176;)</td>
+        <td class="data">9 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.7&#176;F</td>
+        <td class="data">76.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          203
+          202
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:39:02 PM">
-            76.7</span><br/>
+          <span title="02:45:02 PM">
+            76.8</span><br/>
           <span title="07:44:01 AM">
             73.0</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 23 hours, 57 minutes</td>
+      <td class="data">13 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 23 hours, 57 minutes</td>
+      <td class="data">13 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
